--- a/laravel/.env.docker.example
+++ b/laravel/.env.docker.example
@@ -8,5 +8,5 @@ DB_CONNECTION=mysql
 DB_HOST=mysql
 DB_PORT=3306
 DB_DATABASE=breitling
-DB_USERNAME=breitling
-DB_PASSWORD=breitling
+DB_USERNAME=
+DB_PASSWORD=
