--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,4 @@
-version: "3.9"
+version: '3.9'
 services:
   mysql:
     image: mysql:8.0
@@ -11,7 +11,7 @@ services:
       MYSQL_USER: breitling
       MYSQL_PASSWORD: breitling
     ports:
-      - "3306:3306"
+      - '3306:3306'
     volumes:
       - db_data:/var/lib/mysql
 
@@ -24,18 +24,18 @@ services:
     env_file:
       - ./laravel/.env.docker
     ports:
-      - "8000:8000"
+      - '8000:8000'
     volumes:
       - ./laravel:/var/www/
       - ./laravel/.env.docker:/var/www/.env
-    command: sh -c "composer install && php artisan key:generate && php artisan migrate && php artisan serve --host=0.0.0.0 --port=8000"
+    command: sh -c "composer install && php artisan key:generate && php artisan migrate && php artisan storage:link && php artisan serve --host=0.0.0.0 --port=8000"
 
   frontend:
     build:
       context: ./frontend
     container_name: breitling-frontend
     ports:
-      - "5173:5173"
+      - '5173:5173'
     volumes:
       - ./frontend:/app
       - /app/node_modules
