Remove old file route/api.php

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -4,7 +4,7 @@ WORKDIR /app
 COPY package*.json ./
 RUN npm install
 
-COPY breitleague-academy .
+COPY . .
 EXPOSE 5173
 
 CMD ["npm", "run", "dev"]
